# sparsespline-ffn

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  _one_ffn_step.py  activation_memory.py  core_trajectory_plots.py  core_uncertainty_analysis.py  cost_normalized_table.py  cuda_graphs_compare.py  d_scaling_sweep.py  decision_parser.py  extract_trajectories.py  fetch_train_results.py  ffn_full_compare.py  flash_spline_feature_audit.py  flash_spline_feature_bench.py  flops.py  fwd_bwd_split.py  init_sensitivity.py  invariant_audit.py  kernel_audit.py  kernel_speedup.py  knot_utilization.py  latency.py  lm_endtoend_curve.py  long_step_stability.py  memory_checkpoint.py  mixer_width_sweep.py  modal_audit_data_v2.py  modal_download_climbmix.py  modal_h100_all_kernels.py  modal_h100_audit_data.py  modal_h100_bench.py  modal_h100_bwd_v1_vs_v2.py  modal_h100_bwd_v1_vs_v3.py  modal_h100_bwd_v3_probe.py  modal_h100_bwd_v3_vs_v4.py  modal_h100_bwd_v3_vs_v5.py  modal_h100_bwd_v4_probe.py  modal_h100_bwd_v5_correctness_extended.py  modal_h100_bwd_v5_dual_shape_probe.py  modal_h100_bwd_v5_n_scaling.py  (+72 more)
benchmarks/data/: core_per_task_2026-05-04.json  core_per_task_2026-05-06.json  cost_normalized_2026-05-04.json  trajectory_2026-05-04.json
dispatcher_runs/: mlp_d20_reference_v2_seed0.STATUS  mlp_d20_reference_v2_seed0.manifest.json  rlkv_d20_smoke_b.STATUS  rlkv_d20_smoke_b.manifest.json  rlkv_d20_smoke_c.STATUS
docs/: ARCHITECTURE.md  MIGRATION_FROM_PAL_KAN.md  PLAN_MEGAKERNEL_RL_KV.md  README.md  STATUS_2026-05-05_placement_bundle.md  THEORY.md
docs/_artifacts/: core_per_task_2026-05-04.csv  core_uncertainty_2026-05-04.json  core_uncertainty_2026-05-04.txt
examples/: basic_usage.py  hosvd_warmstart.py  mlp_baseline_compare.py  transformer_swap.py
integrations/: tiny_transformer.py
integrations/nanochat/: README.md
scripts/: check_project.sh
src/sparsespline_ffn/: __init__.py  __main__.py  diagnostics.py  fullmix_tucker.py  glu_ffn.py  rl_spline_kv_reference.py  schedules.py  simple_spline_mlp.py  tucker_init.py
src/sparsespline_ffn/cuda_ext/: __init__.py  cute_oracle.cu  spline_kv_bwd.cu  spline_kv_bwd_hopper.cu  spline_kv_bwd_v6.cu  spline_kv_bwd_v7_cute.cu  spline_kv_bwd_v7ws_cute.cu  spline_kv_bwd_wgmma.cu  spline_kv_bwd_wgmma_v2.cu  spline_kv_bwd_wgmma_v3.cu  spline_kv_bwd_wgmma_v4.cu  spline_kv_bwd_wgmma_v5.cu  spline_kv_bwd_wmma.cu  spline_kv_fwd.cu  spline_kv_fwd_v10.cu  spline_kv_fwd_v11.cu  spline_kv_fwd_v3.cu  wgmma_tma_test.cu
src/sparsespline_ffn/kernels/: __init__.py  b1_autograd.py  b2_autograd.py  flash_spline_feature_autograd.py  flash_spline_feature_backward_ref.py  triton_b1.py  triton_b2.py  triton_flash_spline_feature.py
tests/: conftest.py  test_b2_spline.py  test_cli.py  test_diagnostics.py  test_flash_spline_feature_autograd.py  test_flash_spline_feature_backward_kernel.py  test_flash_spline_feature_backward_ref.py  test_flash_spline_feature_forward.py  test_flash_spline_feature_v4.py  test_fullmix_tucker.py  test_fullmix_tucker_extras.py  test_integrations.py  test_kernel_api.py  test_kernels.py  test_numerical_stability.py  test_package.py  test_project_metadata.py  test_rl_spline_kv_reference.py  test_rlkv_kernel_parity.py  test_schedules.py  test_schedules_extras.py
