[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparsespline-ffn"
version = "0.1.0"
description = "SparseSpline-FFN: locally-supported spline FFN replacements for transformer MLP blocks"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Rich" },
]
maintainers = [
    { name = "Rich" },
]
keywords = [
    "transformers",
    "ffn",
    "b-spline",
    "tucker",
    "pytorch",
    "triton",
    "language-models",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.3",
]

[project.urls]
Homepage = "https://github.com/rich7420/sparsespline-ffn"
Repository = "https://github.com/rich7420/sparsespline-ffn"
Issues = "https://github.com/rich7420/sparsespline-ffn/issues"
Changelog = "https://github.com/rich7420/sparsespline-ffn/blob/main/CHANGELOG.md"

[project.optional-dependencies]
cuda = [
    "triton>=3.0; platform_system=='Linux'",
]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff>=0.5",
    "mypy>=1.8",
    "build>=1.2",
    "pre-commit>=3.7",
]
bench = [
    "numpy>=1.26",
]
all = [
    "sparsespline-ffn[cuda,dev,bench]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sparsespline_ffn = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --strict-markers -p no:cacheprovider"
markers = [
    "cuda: requires CUDA GPU",
    "slow: long-running tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP"]
# B009 / B010 (Replace [g/s]etattr with assignment) conflict with the
# nn.Module attribute-typing workaround in `schedules.build_ffn`; keep
# the setattr form so mypy's strict-Module typing does not flag the
# metadata writes.
ignore = ["E501", "B009", "B010"]

[tool.ruff.lint.per-file-ignores]
# Triton kernels intentionally use single-letter loop indices (l, k, n)
# that mirror the math notation (L, K, N) in THEORY.md.
"src/sparsespline_ffn/kernels/*.py" = ["E741"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
# We do not require fully-typed signatures (PyTorch's own types aren't strict
# enough for that yet), but we do want module-level errors to surface so the
# `py.typed` promise stays meaningful.
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["triton", "triton.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["sparsespline_ffn"]
branch = true

[tool.coverage.report]
fail_under = 80
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
